@@ -3,7 +3,8 @@ plugins {
     application
     id("com.gradleup.shadow") version "9.6.0"
     id("io.freefair.lombok") version "9.5.0"
-    id("dev.minestom-united.minestom-events") version "0.0.2"
+    id("dev.minestom-united.minestom-events") version "0.0.3"
+    id("org.graalvm.buildtools.native") version "1.1.9"
     alias(libs.plugins.blossom)
     alias(libs.plugins.indragit)
 }
@@ -25,7 +26,11 @@ minestomEvents {
 }
 
 java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(25))
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+        vendor = JvmVendorSpec.matching("GraalVM")
+        nativeImageCapable = true
+    }
 }
 
 tasks.named<JavaExec>("run") {
@@ -53,7 +58,27 @@ tasks {
         archiveClassifier.set("")
         mergeServiceFiles()
     }
-    jar {
-        enabled = false
+}
+
+// stolen from HC
+graalvmNative {
+    binaries {
+        named("main") {
+            buildArgs(
+                listOf(
+                    "--enable-native-access=ALL-UNNAMED", "--enable-monitoring=jfr",
+                    "--features=net.cytonic.nativeimage.NativeImageFeature",
+                    "-H:+UseCompressedReferences", "-R:MaxHeapSize=200m",
+                    "--static-nolibc", "--no-fallback",
+                    "--emit build-report",
+                    "--enable-url-protocols=http,https",
+                    "--initialize-at-build-time=net.cytonic.cytosis.StaticInitializers",
+                    "--report-unsupported-elements-at-runtime",
+                    "--initialize-at-build-time=it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap",
+                    $$"--initialize-at-build-time=it.unimi.dsi.fastutil.ints.Int2ObjectMaps$EmptyMap",
+                    "--initialize-at-build-time=ch.qos.logback.classic.spi.LogbackServiceProvider",
+                )
+            )
+        }
     }
 }
